# sel4test

./: CMakeLists.txt  settings.cmake
apps/sel4test-driver/src/: main.c
kernel/: CMakeLists.txt
overlay/: overlay1.dts  overlay2.dts  overlay3.dts  overlay4.dts
